# xayn_async_bindgen

./: Cargo.toml  NOTICE  README.md  notes.md  rust-toolchain.toml  test.sh
.ci/install-cargo-sort/: action.yml
.github/workflows/: audit.yml  dart_ci.yml  integration_tests_ci.yml  rust_ci.yml
async-bindgen/: Cargo.toml
async-bindgen-derive/: Cargo.toml
async-bindgen-derive/src/: error.rs  generate.rs  lib.rs  parse.rs  test_utils.rs  utils.rs
async-bindgen-derive/src/generate/: dart_glue.rs
async-bindgen-derive/src/parse/: api.rs  function.rs  meta.rs
async-bindgen-gen-dart/: Cargo.toml
async-bindgen-gen-dart/src/: gen_dart.rs  main.rs  parse_genesis.rs  test_utils.rs
async-bindgen/src/: async_runtime.rs  dart.rs  lib.rs
async_bindgen_dart_utils/: .gitignore  pubspec.yaml
async_bindgen_dart_utils/lib/: async_bindgen_dart_utils.dart
async_bindgen_dart_utils/test/: unit_test.dart
codegen-dart/: Cargo.toml
codegen-dart/src/: gen_dart.rs  main.rs  parse_genesis.rs
codegen-rust/: Cargo.toml
codegen-rust/src/: error.rs  lib.rs  parse.rs  utils.rs
codegen-rust/src/generate/: dart_glue.rs
dart_utils/lib/: easync_dart_io_utils.dart
easync-codegen/: Cargo.toml
easync-codegen/src/: config.rs  dart.rs  gen_rust.rs  interface.rs  lib.rs  test_utils.rs
easync-codegen/src/dart/: gen_dart.rs  gen_rust.rs
easync-rust-dart-io-utils/: Cargo.toml
easync-rust-dart-io-utils/src/: lib.rs
easync-wtf/: Cargo.toml
easync-wtf/src/: lib.rs  opaque.rs  platform.rs  spawn.rs
easync-wtf/src/platform/: dart_native.rs
easync_dart_io_utils/: pubspec.yaml
integration-tests-bindings/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
integration-tests-bindings/src/: api2.rs  async_api.rs  async_bindings.rs  lib.rs
integration_tests/: .gitignore  analysis_options.yaml  pubspec.yaml
integration_tests/include/: IntegrationTestsFfi.h
integration_tests/lib/: integration_tests.dart
integration_tests/lib/src/: genesis.ext.dart  load_lib.dart
integration_tests/test/: integration_tests_test.dart
