[workspace]
members = [
    "async-bindgen",
    "async-bindgen-derive",
    "async-bindgen-gen-dart",
    "integration-tests-bindings"
]
resolver = "2"

[patch.crates-io.async-bindgen]
path = "./async-bindgen"

[patch.crates-io.xayn-dart-api-dl]
git = "https://github.com/xaynetwork/xayn_dart_api_dl.git"
branch = "main"

[patch.crates-io.xayn-dart-api-dl-sys]
git = "https://github.com/xaynetwork/xayn_dart_api_dl.git"
branch = "main"
