[package]
name = "async-bindgen-gen-dart"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.53"
handlebars = "4.2.1"
heck = "0.4.0"
once_cell = "1.9.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
structopt = "0.3.26"

[dev-dependencies]
itertools = "0.10.3"
