[package]
name = "async-bindgen-gen-dart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.130", features=["derive"] }
anyhow = "1.0.45"
regex = "1.5.4"
once_cell = "1.8.0"
handlebars = "4.1.5"
structopt = "0.3.25"