[package]
name = "async-bindgen-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.10", features=["full", "extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
proc-macro-error = "1.0.4"

# anyhow = "1.0.45"
#
# quote = "1.0.10"
# toml = "0.5.8"
#
# regex = "1.5.4"
once_cell = "1.8.0"
# handlebars = "4.1.5"
# serde_json = "1.0.71"