[package]
name = "easync-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
syn = { version="1.0.10", features=["full", "extra-traits"] }
quote = "1.0.10"
toml = "0.5.8"
proc-macro2 = "1.0.29"
regex = "1.5.4"
once_cell = "1.8.0"
handlebars = "4.1.5"
serde_json = "1.0.71"